Fix copyright footer alignment.

--- a/src/styles/_footer.sass
+++ b/src/styles/_footer.sass
@@ -43,10 +43,16 @@ footer
   background: darken($primary-color, 15%)
   color: white
   text-align: center
-  font-size: 0.9rem
   letter-spacing: 1px
   overflow: auto
-  color: lighten($primary-color, 65%)
+
+  p
+    margin: 0.5rem 0
+    font-size: 0.8rem
+    color: lighten($primary-color, 40%)
+
+  a
+    color: lighten($primary-color, 50%)
 
   .inner-container
     padding: 0.5rem 0
